update hr.po thanks to zeljko2 and also fr.po

--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-18 13:44+0200\n"
-"PO-Revision-Date: 2019-07-18 13:46+0200\n"
+"POT-Creation-Date: 2019-07-28 21:03+0200\n"
+"PO-Revision-Date: 2019-07-28 21:08+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.3\n"
 
 msgid ""
 "\n"
@@ -934,6 +934,9 @@ msgstr "Tous satellites 4 (USALS)"
 
 msgid "All services provider"
 msgstr "Tous les opérateurs de services"
+
+msgid "All slots"
+msgstr "Tous les slots"
 
 msgid "Allocate"
 msgstr "Allouer"
