hr.po update for R7.1

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-25 10:12+0200\n"
-"PO-Revision-Date: 2019-05-12 07:10+0200\n"
+"PO-Revision-Date: 2019-07-29 10:38+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.3\n"
 
 msgid ""
 "\n"
@@ -850,7 +850,7 @@ msgid "Add timer"
 msgstr "Dodaj tajmer"
 
 msgid "Add title"
-msgstr "Dodaj naslov"
+msgstr "Dodaj titl"
 
 msgid "Add to bouquet"
 msgstr "Dodaj u paket"
@@ -1625,7 +1625,7 @@ msgid "Change PIN"
 msgstr "Promijeni PIN"
 
 msgid "Change bouquets in quickzap"
-msgstr "Promijeni paket u brzom prebacivanju"
+msgstr "Promijenite paket u brzom prebacivanju"
 
 msgid "Change recording (add time)"
 msgstr "Promijeni snimanje (dodaj vrijeme)"
@@ -1769,7 +1769,7 @@ msgid "Clear before scan"
 msgstr "Čiščenje prije skeniranja"
 
 msgid "Clear fixed"
-msgstr "Očisti fiksno"
+msgstr "Nova adresa"
 
 msgid "Clear log"
 msgstr "Očisti log"
@@ -1793,7 +1793,7 @@ msgid "Close PiP on exit"
 msgstr "Zatvorite PiP i izađite"
 
 msgid "Close title selection"
-msgstr "Zatvori odabir naslova"
+msgstr "Zatvori odabir titlova"
 
 msgid "Cocos (Keeling) Islands"
 msgstr "Kokosovi otoci"
@@ -2477,7 +2477,7 @@ msgid "DVD player"
 msgstr "DVD player"
 
 msgid "DVD titlelist"
-msgstr "DVD popis naslova"
+msgstr "DVD popis titlova"
 
 msgid "Danish"
 msgstr "Danski"
@@ -2685,7 +2685,7 @@ msgid "Digital contour removal"
 msgstr "Digitalno uklanjanje kontura"
 
 msgid "Direct playback of linked titles without menu"
-msgstr "Izravna reprodukcija povezanih naslova bez izbornika"
+msgstr "Izravna reprodukcija povezanih titlova bez izbornika"
 
 msgid "Directory"
 msgstr "Imenik"
@@ -3008,7 +3008,7 @@ msgid "Edit DNS"
 msgstr "Uredite DNS"
 
 msgid "Edit chapters of current title"
-msgstr "Uredite poglavlje trenutnog naslova"
+msgstr "Uredite poglavlje trenutnog titla"
 
 msgid "Edit selection"
 msgstr "Uredi odabir"
@@ -3026,7 +3026,7 @@ msgid "Edit timer"
 msgstr "Uredite tajmer"
 
 msgid "Edit title"
-msgstr "Uredite titlove"
+msgstr "Uredite titl"
 
 msgid "Edit upgrade source url."
 msgstr "Uredi url izvornog ažuriranja."
@@ -4644,7 +4644,7 @@ msgid "Link:"
 msgstr "Veza:"
 
 msgid "Linked titles with a DVD menu"
-msgstr "Povezani naslovi s DVD izbornikom"
+msgstr "Povezani titlovi s DVD izbornikom"
 
 msgid "List available networks"
 msgstr "Popis dostupnih mreža"
@@ -4809,9 +4809,8 @@ msgstr "Ručno pretraživanje"
 msgid "Manual transponder"
 msgstr "Ručni transponder"
 
-#, fuzzy
 msgid "Manually import from fallback tuner"
-msgstr "Omogućite uvoz tajmera iz zamjenskog tjunera"
+msgstr "Ručno uvezite iz rezervnog tjunera"
 
 msgid "Manufacturer"
 msgstr "Proizvođač"
@@ -5244,9 +5243,8 @@ msgstr "Nema dostupnih ECMPid (FTA usluga)"
 msgid "No HDD found or HDD not initialized!"
 msgstr "HDD nije pronađen ili nije inicijaliziran!"
 
-#, fuzzy
 msgid "No active subservices available."
-msgstr "Nema dostupnih ažuriranja"
+msgstr "Nisu dostupne aktivne podsluge."
 
 msgid "No age block"
 msgstr "Nema dobne granice"
@@ -5419,13 +5417,11 @@ msgstr "Norveški"
 msgid "Not Defined"
 msgstr "Nije definirano"
 
-#, fuzzy
 msgid "Not Installed"
-msgstr "Instaliranje"
+msgstr "Nije instalirano"
 
-#, fuzzy
 msgid "Not Required"
-msgstr "Nije definirano"
+msgstr "Nije potrebno"
 
 msgid "Not associated"
 msgstr "Nije povezano"
@@ -5775,7 +5771,7 @@ msgid "Play recorded movies..."
 msgstr "Reproducirajte snimljene filmove..."
 
 msgid "Please add titles to the compilation."
-msgstr "Dodajte naslove kompilaciji."
+msgstr "Dodajte titlove kompilaciji."
 
 msgid "Please change recording endtime"
 msgstr "Promijenite vrijeme završetka snimanja"
@@ -6247,7 +6243,7 @@ msgid "Progress:"
 msgstr "Napredak:"
 
 msgid "Properties of current title"
-msgstr "Svojstva trenutnog naslova"
+msgstr "Svojstva trenutnog titla"
 
 msgid "Protect Screens"
 msgstr "Zaštita izbornika"
@@ -6508,10 +6504,10 @@ msgid "Remove completed timers after (days)"
 msgstr "Uklanjanje dovršenih tajmera nakon (dana)"
 
 msgid "Remove currently selected title"
-msgstr "Uklonite trenutno odabrani naslov"
+msgstr "Uklonite trenutno odabrani titl"
 
 msgid "Remove items from trash can after (days)"
-msgstr "Uklonjanje stavki iz kante za smeće nakon (dana)"
+msgstr "Uklanjanje stavki iz kante za smeće nakon (dana)"
 
 msgid "Remove plugins"
 msgstr "Uklonite dodatke"
@@ -6520,7 +6516,7 @@ msgid "Remove this logfile"
 msgstr "Uklonite ovu datoteku dnevnika"
 
 msgid "Remove title"
-msgstr "Uklonite naslov"
+msgstr "Uklonite titl"
 
 msgid "Removing"
 msgstr "Uklanjanje"
@@ -6585,7 +6581,7 @@ msgid "Reset"
 msgstr "Reset"
 
 msgid "Reset and renumerate title names"
-msgstr "Poništite i ponovno brojite nazive naslova"
+msgstr "Poništite i ponovno brojite nazive titlova"
 
 msgid "Reset order (All)"
 msgstr "Poništite redoslijed (sve)"
@@ -6621,7 +6617,7 @@ msgid "Restart enigma"
 msgstr "Restart enigma (Ponovno pokretanje enigme)"
 
 msgid "Restart enigma in debug mode"
-msgstr "Ponovno pokrenite enigmu u načinu za otklanjanje pogrešaka"
+msgstr "Ponovno pokretanje enigme u načinu za otklanjanje pogrešaka"
 
 msgid "Restart enigma in standard mode"
 msgstr "Ponovno pokrenite enigmu u standardnom načinu"
@@ -6692,7 +6688,7 @@ msgid "Rewind speeds"
 msgstr "Brzine premotavanja"
 
 msgid "Rewrap subtitles"
-msgstr "Ponovno formatirajte titlove"
+msgstr "Ponovno spakirajte titlove"
 
 msgid "Right"
 msgstr "Desno"
@@ -7100,7 +7096,7 @@ msgid "Select Multiboot"
 msgstr "Odaberite Multiboot"
 
 msgid "Select Softcam"
-msgstr "Odaberite SoftCam"
+msgstr "Odaberite softcam"
 
 msgid "Select a bouquet"
 msgstr "Odaberite paket"
@@ -7341,7 +7337,7 @@ msgid "Senegal"
 msgstr "Senegal"
 
 msgid "Separate titles with a main menu"
-msgstr "Odvojite imena iz glavnog izbornika"
+msgstr "Odvojite titlove iz glavnog izbornika"
 
 msgid "Sequence repeat"
 msgstr "Ponavljanje slijeda"
@@ -7412,7 +7408,7 @@ msgid "Service scan"
 msgstr "Pretraživanje usluge"
 
 msgid "Service searching"
-msgstr "Traženje usluga"
+msgstr "Pretraživanje kanala"
 
 msgid "Service title mode"
 msgstr "Način naziva usluge"
@@ -7455,7 +7451,7 @@ msgid "Set end time"
 msgstr "Postavite vrijeme završetka"
 
 msgid "Set fixed"
-msgstr "Postavite fiksno"
+msgstr "Popravi adresu"
 
 msgid "Set fps for external subtitles"
 msgstr "Postavite fps (podešavanje kadrova u sekundi) za vanjske titlove"
@@ -9944,7 +9940,7 @@ msgid "When enabled, number markers will be hidden."
 msgstr "Kada je omogućeno, brojčani markeri bit će skriveni."
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
-msgstr "Ako je omogućeno, ponovno formatirajte titlove kako bi odgovarali širini zaslona."
+msgstr "Ako je omogućeno, ponovno spakirajte titlove kako bi odgovarali širini zaslona."
 
 msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr "Kada je omogućeno, usluge se mogu grupirati u više paketa."
@@ -11309,13 +11305,13 @@ msgstr "Preskočiti unatrag"
 msgid "skip forward"
 msgstr "Preskočiti naprijed"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s"
-msgstr "utor%s - %s način 1"
+msgstr "utor%s - %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "slot%s - %s (current image)"
-msgstr "utor%s - %s način 1 (trenutni image)"
+msgstr "utor%s - %s (trenutni image)"
 
 #, python-format
 msgid "slot%s - %s (current image) with, backup"
