--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-18 13:44+0200\n"
+"POT-Creation-Date: 2019-08-02 10:56+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1068,6 +1068,11 @@ msgstr "Všechny satelity 4 (USALS)"
 #
 msgid "All services provider"
 msgstr "Všechny programy poskytovatele"
+
+#
+#, fuzzy
+msgid "All slots"
+msgstr "Vyberte slot"
 
 msgid "Allocate"
 msgstr "Přidělit"
@@ -3584,6 +3589,11 @@ msgstr "Povolit OK jako náhled ve výběru kanálů"
 
 msgid "Enable OK for channel selection"
 msgstr "Povolit OK pro výběr kanálu"
+
+#
+#, fuzzy
+msgid "Enable OpenTV EPG"
+msgstr "Povolit EIT EPG"
 
 msgid "Enable ViaSat EPG"
 msgstr "Povolit ViaSat EPG"
@@ -10881,6 +10891,10 @@ msgstr "Používat MHW EPG informace, jestliže jsou dostupné."
 
 msgid "Use Netmed EPG information when it is available."
 msgstr "Používat Netmed EPG informace, jestliže jsou dostupné."
+
+#, fuzzy
+msgid "Use OpenTV EPG information when it is available."
+msgstr "Používat EIT EPG informace, jestliže jsou dostupné."
 
 msgid "Use TV remote control"
 msgstr "Používat dálkové ovládání TV"
