--- a/po/cs.po
+++ b/po/cs.po
@@ -1070,9 +1070,8 @@ msgid "All services provider"
 msgstr "Všechny programy poskytovatele"
 
 #
-#, fuzzy
 msgid "All slots"
-msgstr "Vyberte slot"
+msgstr "Všechny sloty"
 
 msgid "Allocate"
 msgstr "Přidělit"
@@ -3591,9 +3590,8 @@ msgid "Enable OK for channel selection"
 msgstr "Povolit OK pro výběr kanálu"
 
 #
-#, fuzzy
 msgid "Enable OpenTV EPG"
-msgstr "Povolit EIT EPG"
+msgstr "Povolit OpenTV EPG"
 
 msgid "Enable ViaSat EPG"
 msgstr "Povolit ViaSat EPG"
@@ -8091,7 +8089,7 @@ msgstr "Vyhledá v síti bezdrátové připojovací body a připojí se k nim za
 
 #, python-format
 msgid "Scanning %s..."
-msgstr "Prohledává %s..."
+msgstr "Prohledávání %s..."
 
 #. TRANSLATORS: The stb is performing a channel scan, progress percentage is printed in '%d' (and '%%' will show a single '%' symbol)
 #, python-format
@@ -9826,7 +9824,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®19.7.2019"
+"®2.8.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10892,9 +10890,8 @@ msgstr "Používat MHW EPG informace, jestliže jsou dostupné."
 msgid "Use Netmed EPG information when it is available."
 msgstr "Používat Netmed EPG informace, jestliže jsou dostupné."
 
-#, fuzzy
 msgid "Use OpenTV EPG information when it is available."
-msgstr "Používat EIT EPG informace, jestliže jsou dostupné."
+msgstr "Používat OpenTV EPG informace, jestliže jsou dostupné."
 
 msgid "Use TV remote control"
 msgstr "Používat dálkové ovládání TV"
