[About.py] Correct a text message in MemoryInfo screen
The change does not alter the meaning of the text, it just uses more correct English language. So, the existing translations are kept as they are.

--- a/po/nl.po
+++ b/po/nl.po
@@ -9039,8 +9039,8 @@ msgstr "Dit veld biedt de optie om te scannen naar een aanvullende symbolrate to
 
 msgid ""
 "This info is for developers only.\n"
-"For a normal users it is not relevant.\n"
-"Don't panic please when you see values being displayed that you think look suspicious!"
+"For normal users it is not relevant.\n"
+"Please don't panic if you see values displayed looking suspicious!"
 msgstr ""
 "U hoeft niet in paniek te raken indien u vreemde zaken ziet in dit overzicht.\n"
 "\n"
