all po files updated from develop at 2019-09-29 09:29

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-07 13:00+0200\n"
+"POT-Creation-Date: 2019-09-29 09:27+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -201,6 +201,14 @@ msgstr "%.0f MB"
 #, python-format
 msgid "%.0f kB"
 msgstr "%.0f kB"
+
+#, python-format
+msgid "%.1f°E"
+msgstr ""
+
+#, python-format
+msgid "%.1f°W"
+msgstr ""
 
 #, python-format
 msgid "%.2f GB"
@@ -1202,6 +1210,11 @@ msgstr "Arabsky"
 
 msgid "Are you sure to purge all deleted userbouquets?"
 msgstr "Opravdu chcete odstranit všechny smazané přehledy?"
+
+#
+#, fuzzy
+msgid "Are you sure to reboot to"
+msgstr "Opravdu chcete odstranit tuto položku?"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -4471,9 +4484,6 @@ msgstr "Přejít na"
 msgid "Goto 0"
 msgstr "Jít na pozici 0"
 
-msgid "Goto:"
-msgstr "Na:"
-
 msgid "Goto X"
 msgstr "Přejít na X"
 
@@ -4501,6 +4511,9 @@ msgstr "Přejít na primetime / aktuální čas"
 
 msgid "Goto specific date/time"
 msgstr "Přejít na zadané datum/čas"
+
+msgid "Goto:"
+msgstr "Na:"
 
 msgid "GotoX calibration"
 msgstr "Kalibrace Přejít na X"
@@ -7252,9 +7265,6 @@ msgid "Primary DNS"
 msgstr "Primární DNS"
 
 msgid "Prime time"
-msgstr "Primetime"
-
-msgid "PrimeTime"
 msgstr "Primetime"
 
 #
@@ -13292,6 +13302,9 @@ msgstr "do standby/restartu"
 msgid "update bookmarks"
 msgstr "Aktualizovat záložky"
 
+msgid "used"
+msgstr ""
+
 #
 msgid "user defined"
 msgstr "Uživatelské"
@@ -13389,6 +13402,9 @@ msgstr "Ano"
 #
 msgid "yes (keep feeds)"
 msgstr "Ano (uchovat zdroje)"
+
+msgid "yes, but not in multi selections"
+msgstr ""
 
 #
 msgid "zap"
