--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-07 13:00+0200\n"
+"POT-Creation-Date: 2019-09-29 09:27+0200\n"
 "PO-Revision-Date: 2019-07-25 17:52+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -186,6 +186,14 @@ msgstr "%.0f MB"
 #, python-format
 msgid "%.0f kB"
 msgstr "%.0f kB"
+
+#, python-format
+msgid "%.1f°E"
+msgstr ""
+
+#, python-format
+msgid "%.1f°W"
+msgstr ""
 
 #, python-format
 msgid "%.2f GB"
@@ -1068,6 +1076,10 @@ msgstr "Арабский"
 
 msgid "Are you sure to purge all deleted userbouquets?"
 msgstr "Вы действительно хотите очистить все удаленные пользовательские букеты?"
+
+#, fuzzy
+msgid "Are you sure to reboot to"
+msgstr "Вы действительно хотите удалить выбранное?"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -3904,9 +3916,6 @@ msgstr "Переход"
 msgid "Goto 0"
 msgstr "Переход на позицию 0"
 
-msgid "Goto:"
-msgstr "Куда:"
-
 msgid "Goto X"
 msgstr "Переход на позицию Х"
 
@@ -3933,6 +3942,9 @@ msgstr "Переход прайм-тайм/сейчас"
 
 msgid "Goto specific date/time"
 msgstr "Переход на конкретную дату/время"
+
+msgid "Goto:"
+msgstr "Куда:"
 
 msgid "GotoX calibration"
 msgstr "Калибровка позиции Х"
@@ -6294,9 +6306,6 @@ msgid "Primary DNS"
 msgstr "Первичный DNS"
 
 msgid "Prime time"
-msgstr "Прайм-тайм"
-
-msgid "PrimeTime"
 msgstr "Прайм-тайм"
 
 msgid "Priority"
@@ -11571,6 +11580,9 @@ msgstr "до режима ожидания/перезагрузки"
 msgid "update bookmarks"
 msgstr "обновить закладки"
 
+msgid "used"
+msgstr ""
+
 msgid "user defined"
 msgstr "пользовательский вариант"
 
@@ -11655,6 +11667,9 @@ msgstr "да"
 
 msgid "yes (keep feeds)"
 msgstr "да (сохранить feeds сервисы)"
+
+msgid "yes, but not in multi selections"
+msgstr ""
 
 msgid "zap"
 msgstr "перейти"
