--- a/po/cs.po
+++ b/po/cs.po
@@ -1212,9 +1212,8 @@ msgid "Are you sure to purge all deleted userbouquets?"
 msgstr "Opravdu chcete odstranit všechny smazané přehledy?"
 
 #
-#, fuzzy
 msgid "Are you sure to reboot to"
-msgstr "Opravdu chcete odstranit tuto položku?"
+msgstr "Opravdu chcete restartovat do"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -4152,7 +4151,6 @@ msgid "Fallback tuner setup"
 msgstr "Nastavení záložního tuneru"
 
 #
-#, fuzzy
 msgid "False"
 msgstr "Ne"
 
@@ -9839,7 +9837,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®2.8.2019"
+"®29.9.2019"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10583,7 +10581,7 @@ msgid "Troubleshoot"
 msgstr "Řešení problémů"
 
 msgid "True"
-msgstr ""
+msgstr "Ano"
 
 #
 msgid "Try to find used transponders in cable network.. please wait..."
@@ -13404,7 +13402,7 @@ msgid "yes (keep feeds)"
 msgstr "Ano (uchovat zdroje)"
 
 msgid "yes, but not in multi selections"
-msgstr ""
+msgstr "ano, ale ne ve vícenásobných výběrech"
 
 #
 msgid "zap"
