cosmetic in cs.po

--- a/po/cs.po
+++ b/po/cs.po
@@ -13402,7 +13402,7 @@ msgid "yes (keep feeds)"
 msgstr "Ano (uchovat zdroje)"
 
 msgid "yes, but not in multi selections"
-msgstr "ano, ale ne ve vícenásobných výběrech"
+msgstr "Ano, ale ne ve vícenásobných výběrech"
 
 #
 msgid "zap"
