--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5079,10 +5079,10 @@ msgid "Moldova (Republic of)"
 msgstr ""
 
 msgid "Mon"
-msgstr "星期一"
+msgstr "周一"
 
 msgid "Mon-Fri"
-msgstr "星期一至星期五"
+msgstr "周一至周五"
 
 msgid "Monaco"
 msgstr ""
@@ -6982,7 +6982,7 @@ msgid "Sao Tome and Principe"
 msgstr ""
 
 msgid "Sat"
-msgstr "星期六"
+msgstr "周六"
 
 msgid "Satellite"
 msgstr "目标卫星"
@@ -8510,7 +8510,7 @@ msgid "Sudan"
 msgstr ""
 
 msgid "Sun"
-msgstr "星期日"
+msgstr "周日"
 
 msgid "Sunday"
 msgstr "星期日"
@@ -9134,7 +9134,7 @@ msgid "Threshold"
 msgstr "转折频率"
 
 msgid "Thu"
-msgstr "星期四"
+msgstr "周四"
 
 msgid "Thumbnails"
 msgstr "缩略图"
@@ -9334,7 +9334,7 @@ msgid "Trying to download a new packetlist. Please wait..."
 msgstr "尝试下载新的软件包列表。 请稍候"
 
 msgid "Tue"
-msgstr "星期二"
+msgstr "周二"
 
 msgid "Tuesday"
 msgstr "星期二"
@@ -9976,7 +9976,7 @@ msgid "Watch recordings..."
 msgstr "观看录制"
 
 msgid "Wed"
-msgstr "星期三"
+msgstr "周三"
 
 msgid "Wednesday"
 msgstr "星期三"
